--- a/website/templates/index.html
+++ b/website/templates/index.html
@@ -413,7 +413,7 @@
                 <h4>Team Member</h4>
                 <p>
                   <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-                  Write Contribution
+                  ML Model, FedAvg, FedAdp, Ablation, PPT
                   <i class="bx bxs-quote-alt-right quote-icon-right"></i>
                 </p>
               </div>
@@ -426,7 +426,7 @@
                 <h4>Team Member</h4>
                 <p>
                   <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-                  Write Contribution
+                  ML Model, gRPC, FedSGD, Ablation, FedCS, Ablation, PPT
                   <i class="bx bxs-quote-alt-right quote-icon-right"></i>
                 </p>
               </div>
@@ -439,7 +439,7 @@
                 <h4>Team Member</h4>
                 <p>
                   <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-                    Write Contribution
+                    gRPC, FedAdp, Encryption, Ablation, PPT
                   <i class="bx bxs-quote-alt-right quote-icon-right"></i>
                 </p>
               </div>
