Updated presentations and photos

--- a/website/templates/index.html
+++ b/website/templates/index.html
@@ -408,7 +408,7 @@
 
             <div class="swiper-slide">
               <div class="testimonial-item">
-                <img src="{{ url_for('static', filename='assets/img/members/abhinav.jpg') }}" class="testimonial-img" alt="">
+                <img src="{{ url_for('static', filename='assets/img/members/abhinav.jpeg') }}" class="testimonial-img" alt="">
                 <h3>Abhinav Raundhal</h3>
                 <h4>Team Member</h4>
                 <p>
@@ -421,7 +421,7 @@
 
             <div class="swiper-slide">
               <div class="testimonial-item">
-                <img src="{{ url_for('static', filename='assets/img/members/archisha.jpg') }}" class="testimonial-img" alt="">
+                <img src="{{ url_for('static', filename='assets/img/members/archisha.jpeg') }}" class="testimonial-img" alt="">
                 <h3>Archisha Panda</h3>
                 <h4>Team Member</h4>
                 <p>
